--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -12,15 +12,15 @@
     <!-- Bottom Navigation -->
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="367dp"
+        android:layout_width="415dp"
         android:layout_height="584dp"
         tools:layout_editor_absoluteX="-4dp"
-        tools:layout_editor_absoluteY="-1dp">
+        tools:layout_editor_absoluteY="0dp">
 
         <!-- Bagian Profil -->
         <LinearLayout
             android:id="@+id/profileSection"
-            android:layout_width="370dp"
+            android:layout_width="417dp"
             android:layout_height="177dp"
             android:background="@color/black"
             android:gravity="center_horizontal"
@@ -187,10 +187,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:background="#FFFF"
-                android:padding="16dp"
-                >
+                android:orientation="vertical"
+                android:padding="16dp">
 
 
                 <!-- Menu Pengaturan -->
