--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -12,20 +12,24 @@
     <!-- Bottom Navigation -->
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="415dp"
-        android:layout_height="584dp"
+        android:layout_width="417dp"
+        android:layout_height="581dp"
         tools:layout_editor_absoluteX="-4dp"
         tools:layout_editor_absoluteY="0dp">
 
         <!-- Bagian Profil -->
+
+        <!-- Card untuk Progress Total -->
+
         <LinearLayout
             android:id="@+id/profileSection"
-            android:layout_width="417dp"
-            android:layout_height="177dp"
+            android:layout_width="418dp"
+            android:layout_height="182dp"
             android:background="@color/black"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -82,11 +86,10 @@
 
         </LinearLayout>
 
-        <!-- Card untuk Progress Total -->
         <androidx.cardview.widget.CardView
             android:id="@+id/totalProgressCard"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="329dp"
+            android:layout_height="97dp"
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="8dp"
@@ -95,8 +98,8 @@
             app:layout_constraintTop_toBottomOf="@id/profileSection">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="98dp"
+                android:layout_width="333dp"
+                android:layout_height="match_parent"
                 android:background="@drawable/bg"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -175,8 +178,8 @@
         <!-- Menu Utama -->
         <androidx.cardview.widget.CardView
             android:id="@+id/menuCard"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="328dp"
+            android:layout_height="140dp"
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="8dp"
@@ -185,8 +188,8 @@
             app:layout_constraintTop_toBottomOf="@id/totalProgressCard">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="325dp"
+                android:layout_height="match_parent"
                 android:background="#FFFF"
                 android:orientation="vertical"
                 android:padding="16dp">
