--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -15,7 +15,9 @@
         android:layout_width="417dp"
         android:layout_height="581dp"
         tools:layout_editor_absoluteX="-4dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp"
+        android:layout_gravity="center"
+        >
 
         <!-- Bagian Profil -->
 
