--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAKJ4PherHGkOpUpbwPn4-ZmqkVK-VC240</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_GOOGLE_MAPS_KEY</string>
 </resources>
